@@ -4,9 +4,6 @@
  */
 import OLSourceVectorTile from 'ol/source/VectorTile';
 import OLLayerVectorTile from 'ol/layer/VectorTile';
-import { compileSync as compileTemplate } from 'IDEE/util/Template';
-import geojsonPopupTemplate from 'templates/geojson_popup';
-import Popup from 'IDEE/Popup';
 import { isNullOrEmpty, extend } from 'IDEE/util/Utils';
 import * as EventType from 'IDEE/event/eventtype';
 import TileEventType from 'ol/source/TileEventType';
@@ -67,11 +64,6 @@ class MVT extends Vector {
      * MVT formater_. Formato del objeto "MVTFormatter".
      */
     this.formater_ = null;
-
-    /**
-     * MVT popup_. Muestra el "popup".
-     */
-    this.popup_ = null;
 
     /**
      * MVT lastZoom_. Zoom anterior.
@@ -210,81 +202,6 @@ class MVT extends Vector {
         }
       }
     }, 10);
-  }
-
-  /**
-   * Este método se ejecuta cuando se selecciona un objeto geográfico.
-   * @public
-   * @function
-   * @param {ol.Feature} feature Objetos geográficos de Openlayers.
-   * @param {Array} coord Coordenadas.
-   * @param {Object} evt Eventos.
-   * @api stable
-   */
-  selectFeatures(features, coord, evt) {
-    if (this.extract === true) {
-      const feature = features[0];
-      this.unselectFeatures();
-      if (!isNullOrEmpty(feature)) {
-        const popupTemplate = !isNullOrEmpty(this.template)
-          ? this.template : geojsonPopupTemplate;
-        let htmlAsText = compileTemplate(popupTemplate, {
-          vars: this.parseFeaturesForTemplate_(features),
-          parseToHtml: false,
-        });
-        if (this.legend) {
-          const layerLegendHTML = `<div class="m-legend">${this.legend}</div>`;
-          htmlAsText = layerLegendHTML + htmlAsText;
-        }
-
-        const featureTabOpts = {
-          icon: 'g-cartografia-pin',
-          title: this.name,
-          content: htmlAsText,
-        };
-
-        let popup = this.map.getPopup();
-        if (isNullOrEmpty(popup)) {
-          popup = new Popup();
-          popup.addTab(featureTabOpts);
-          this.map.addPopup(popup, coord);
-        } else {
-          popup.addTab(featureTabOpts);
-        }
-      }
-    }
-  }
-
-  /**
-   * Evento que se activa cuando se termina de hacer clic sobre
-   * un objeto geográfico.
-   *
-   * @public
-   * @function
-   * @api stable
-   */
-  unselectFeatures() {
-    if (!isNullOrEmpty(this.popup_)) {
-      this.popup_.hide();
-      this.popup_ = null;
-    }
-  }
-
-  /**
-   * Este método destruye el "popup" MVT.
-   *
-   * @public
-   * @function
-   * @api stable
-   */
-  removePopup() {
-    if (!isNullOrEmpty(this.popup_)) {
-      if (this.popup_.getTabs().length > 1) {
-        this.popup_.removeTab(this.tabPopup_);
-      } else {
-        this.map.removePopup();
-      }
-    }
   }
 
   /**
